# situational_awareness_example

./: CMakeLists.txt  package.xml
launch/: situation.launch
owl/: situation_awareness_example.owl
src/: __init__.pl  cutting.pl  cutting.plt  failure_reasoning.pl  log_events.pl
src/launch/: situation.launch
src/owl/: situation_awareness_example.owl
